<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009, 2010 eFANsoftware

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Adora AA =>Acupuncture Assistant</string>

    <array name="about_msg">
        <item>Adora AA =></item>
        <item>Acupuncture Assistant 1.2.0_ad</item>
        <item></item>
        <item><![CDATA[【Function】: Quick & easy query from hundreds of acupoints standardized by WHO.]]></item> 
        <item></item>
        <item>【Notes】: Contents come from internet (including WHO), for education / reference only.</item>
        <item></item>
        <item>7/4/2010</item>
    </array>
    
    <string name="constant_acupoint_order_num_max">361</string>
    
    <string name="button_market">Market</string>
    <string name="button_ok">OK</string>

    <!-- Menus -->    
    <string name="menu_item_home">Home</string>
    <string name="menu_item_about">About...</string>
    <string name="menu_item_acupoint">Acupoint</string>
    <string name="menu_item_relax">Relax</string>
    <string name="menu_item_credits">Credits</string>
    <string name="menu_item_wallcharts">Wall Charts</string>
    <!-- TODO: Advanced features -->
    <string name="menu_item_patient">Patient</string>
    <string name="menu_item_statistics">Statistics</string>
    <string name="menu_item_full_web">AcuMapper</string> 
    
    
    <!-- Acupoint Query -->
    <string name="acupoint_query_title">Acupoint Query</string>
    <string name="acupoint_name_label">Acupoint: </string>
    <string name="acupoint_selection_reminder">Please Select Acupoint</string>

    <string name="meridian_type_label">Meridian Channel: </string>
    <string name="meridian_type_prompt">Please Select Meridian Channel: </string>
    
    
    <!-- Acupoint Detail -->
    <string name="acupoint_detail_tab_desc_indicator">Notes</string>
    <string name="acupoint_detail_tab_img_indicator">Point</string>
    <string name="acupoint_detail_tab_img_indicator_channel">Meridian</string>

    <string name="notes_title_alias">[Alias]: </string>

    <!-- Acupoint Detail Edit -->
    <string name="acupoint_detail_edit_confirm_update">Confirm Save?</string>


    <!-- Global Wall Chart -->
    <string name="global_image_tip0">Click where you want to enlarge...</string>
    <string name="global_image_tip">
        Please do NOT scroll below! 
        Click gallery icon above to go back to reselect location instead...
    </string>


    <!-- Credit List -->
    <string name="credits_tip">Most contents come from following web sites, which details better to be viewed in normal PC screen.</string>
    
    
    <!-- Common Shareble -->
    <string name="name_code_hint">(name or code)</string>

    <string name="button_query">Query List</string>
    <!-- 
    <string name="button_edit">Edit</string>
    -->
    <string name="button_pre"><![CDATA[<=]]></string>
    <string name="button_next"><![CDATA[=>]]></string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string name="alert_dialog_confirm_title">Please confirm: </string>
    <string name="alert_dialog_ok">Confirm</string>
    <string name="alert_dialog_cancel">Not Sure</string>


    <!-- Others -->
    <string name="prompt_install_aa_data">
        Please install [Adora AA Data] version 1.1.2 or above first so that I can serve you with required data.
	    (To save main device space, version 1.1.0 and above is designed as data separated to the data application.) 
    </string>
    <string name="btn_label_install_aa_data">Go Install AA Data</string>
    
    <string name="ad_keywords">Acupuncture TCM Android Health Reference WHO</string>
    
    <!-- Support -->
    <string name="efan_support">Support: Ask EFAN Question: http://code.google.com/p/adora4acupuncture/issues/entry</string>
    <string name="efan_logo">EFANSOFTWARE(2009~~2010)</string>
    <string name="efan_copy_right">http://www.apache.org/licenses/LICENSE-2.0</string>
</resources>
