<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 eFANsoftware

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- 
welcome (screen) = default home + support
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<!-- Begin default home layout: Acupoint Query --> 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titleText"
        android:text="@string/acupoint_query_title" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3sp"
        android:src="@drawable/line" />

    <TextView
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3sp"
        style="@style/labelText"
        android:text="@string/meridian_type_label" />

    <Spinner 
        android:id="@+id/meridian_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3sp"
        android:drawSelectorOnTop="true"
        android:prompt="@string/meridian_type_prompt"
    />

    <TextView
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3sp"
        style="@style/labelText"
        android:text="@string/acupoint_name_label" />

    <AutoCompleteTextView
        android:id="@+id/acupoint_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3sp"
        android:singleLine="true"
        android:scrollbars="vertical"
        android:capitalize="characters" 
        android:background="@android:drawable/editbox_background"
        android:completionThreshold="1"
        android:completionHint="@string/acupoint_selection_reminder"
        android:hint="@string/name_code_hint" 
        android:textColorHint="@color/hintTextColor" 
    />
 
    <Button
        android:id="@+id/queryButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10sp"
        android:text="@string/button_query" />

<!-- End default home layout: Acupoint Query --> 


<!-- Begin support layout --> 
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:gravity="bottom" >
        
        <com.mobclix.android.sdk.MobclixMMABannerXLAdView
            android:id="@+id/banner_adview"
            android:layout_height="50dip"
            android:layout_width="300dip"
            android:layout_centerHorizontal="true"
        />

        <ImageView
          android:id="@+id/bottom_line"
          android:layout_below="@id/banner_adview"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/line" />
      
        <TextView
            android:id="@+id/support"
            android:layout_below="@id/bottom_line"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:linksClickable="true"
            android:text="@string/efan_support" />

        <TextView
          android:id="@+id/logo"
            android:layout_below="@id/support"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:linksClickable="true"
            android:text="@string/efan_logo" />
    
        <TextView
            android:id="@+id/copy_right"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:linksClickable="true"
            android:text="@string/efan_copy_right" />
    
    </RelativeLayout>
<!-- End support layout --> 

</LinearLayout>
